Fix collapsible content overflow issue

--- a/pages/studio/styles.module.css
+++ b/pages/studio/styles.module.css
@@ -82,21 +82,23 @@
                     display: flex;
                     align-self: flex-end;
                     flex-direction: column;
-                    flex-grow: 1;
                     gap: calc(var(--spacing-extra-large) * 2);
 
                     .studioDescription {
                         display: flex;
                         transition: all 0.4s ease-in-out;
                         max-width: 42rem;
+                        height: 12rem;
                         text-align: justify;
                         font-size: var(--font-size-small);
 
                         &.hideDescription {
                             opacity: 0;
+                            height: 0;
 
                             @media screen and (max-width: 900px) {
                                 display: none;
+                                height: unset;
                             }
                         }
                     }
@@ -106,6 +108,8 @@
                     display: flex;
                     align-self: flex-end;
                     flex-direction: column;
+                    flex-grow: 1;
+                    justify-content: flex-end;
                     transition: all 0.4s ease-in-out;
                     max-width: 42rem;
                     text-align: right;
